--- a/GameDev/GameDev/GameDev.csproj
+++ b/GameDev/GameDev/GameDev.csproj
@@ -20,4 +20,10 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\Audio\" />
+    <Folder Include="Content\Fonts\" />
+    <Folder Include="Content\Sprites\" />
+    <Folder Include="Source\Engine\" />
+  </ItemGroup>
 </Project>
