--- a/GameDev/GameDev/GameDev.csproj
+++ b/GameDev/GameDev/GameDev.csproj
@@ -12,8 +12,10 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Content\Fonts\Arial16.xnb" />
+    <None Remove="Content\Sprites\Button.xnb" />
     <None Remove="Content\Sprites\FarBackground.xnb" />
     <None Remove="Content\Sprites\IdleHero.xnb" />
+    <None Remove="Content\Sprites\Play.xnb" />
     <None Remove="Content\Sprites\RunHero.xnb" />
   </ItemGroup>
   <ItemGroup>
@@ -28,10 +30,16 @@
     <Content Include="Content\Fonts\Arial16.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Sprites\Button.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Sprites\FarBackground.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\IdleHero.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sprites\Play.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\RunHero.xnb">
