--- a/GameDev/GameDev/GameDev.csproj
+++ b/GameDev/GameDev/GameDev.csproj
@@ -14,8 +14,10 @@
     <None Remove="Content\Fonts\Arial16.xnb" />
     <None Remove="Content\Sprites\Forest.xnb" />
     <None Remove="Content\Sprites\IdleHero.xnb" />
+    <None Remove="Content\Sprites\LeftCornerTile.xnb" />
     <None Remove="Content\Sprites\PlayButton.xnb" />
     <None Remove="Content\Sprites\QuitButton.xnb" />
+    <None Remove="Content\Sprites\RightCornerTile.xnb" />
     <None Remove="Content\Sprites\RunHero.xnb" />
     <None Remove="Content\Sprites\SettingsButton.xnb" />
     <None Remove="Content\Sprites\StraightTile.xnb" />
@@ -50,12 +52,20 @@
     <Content Include="Content\Sprites\StraightTile.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Sprites\RightCornerTile.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Audio\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Sprites\SettingsButton.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\Sprites\LeftCornerTile.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
