Added abstract Class GameState

--- a/SwampLands/SwampLands/SwampLands.csproj
+++ b/SwampLands/SwampLands/SwampLands.csproj
@@ -29,6 +29,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="GameStates\" />
     <Folder Include="UserInterface\" />
   </ItemGroup>
 </Project>
