--- a/SwampLands/SwampLands/SwampLands.csproj
+++ b/SwampLands/SwampLands/SwampLands.csproj
@@ -12,9 +12,21 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Content\Sprites\Backgrounds\Forest.xnb" />
+    <None Remove="Content\Sprites\UI\PlayButton.xnb" />
+    <None Remove="Content\Sprites\UI\QuitButton.xnb" />
+    <None Remove="Content\Sprites\UI\SettingsButton.xnb" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Sprites\Backgrounds\Forest.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sprites\UI\PlayButton.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sprites\UI\QuitButton.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sprites\UI\SettingsButton.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -27,9 +39,5 @@
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="GameStates\" />
-    <Folder Include="UserInterface\" />
   </ItemGroup>
 </Project>
