--- a/SwampLands/SwampLands/SwampLands.csproj
+++ b/SwampLands/SwampLands/SwampLands.csproj
@@ -15,6 +15,8 @@
     <None Remove="Content\Fonts\Arial48.xnb" />
     <None Remove="Content\Fonts\Arial48Bold.xnb" />
     <None Remove="Content\Sprites\Backgrounds\Forest.xnb" />
+    <None Remove="Content\Sprites\Hero\IdleHero.xnb" />
+    <None Remove="Content\Sprites\Hero\RunHero.xnb" />
     <None Remove="Content\Sprites\Platform\BottomTile.xnb" />
     <None Remove="Content\Sprites\Platform\LeftCornerTile.xnb" />
     <None Remove="Content\Sprites\Platform\RightCornerTile.xnb" />
@@ -38,6 +40,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\Backgrounds\Forest.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sprites\Hero\IdleHero.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sprites\Hero\RunHero.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\Platform\BottomTile.xnb">
