--- a/SwampLands/SwampLands/SwampLands.csproj
+++ b/SwampLands/SwampLands/SwampLands.csproj
@@ -15,12 +15,14 @@
     <None Remove="Content\Fonts\Arial48.xnb" />
     <None Remove="Content\Fonts\Arial48Bold.xnb" />
     <None Remove="Content\Sprites\Backgrounds\Forest.xnb" />
+    <None Remove="Content\Sprites\Checkpoint\Checkpoint.xnb" />
     <None Remove="Content\Sprites\Hero\IdleHero.xnb" />
     <None Remove="Content\Sprites\Hero\RunHero.xnb" />
     <None Remove="Content\Sprites\Platform\BottomTile.xnb" />
     <None Remove="Content\Sprites\Platform\LeftCornerTile.xnb" />
     <None Remove="Content\Sprites\Platform\RightCornerTile.xnb" />
     <None Remove="Content\Sprites\Platform\StraightTile.xnb" />
+    <None Remove="Content\Sprites\UI\Buttons\NextLevelButton.xnb" />
     <None Remove="Content\Sprites\UI\GameOver.xnb" />
     <None Remove="Content\Sprites\UI\LevelButton.xnb" />
     <None Remove="Content\Sprites\UI\LevelSelect.xnb" />
@@ -29,6 +31,7 @@
     <None Remove="Content\Sprites\UI\QuitButton.xnb" />
     <None Remove="Content\Sprites\UI\RestartButton.xnb" />
     <None Remove="Content\Sprites\UI\SettingsButton.xnb" />
+    <None Remove="Content\Sprites\UI\Titles\Victory.xnb" />
     <None Remove="Content\Sprites\UI\UICanvas.xnb" />
     <None Remove="Content\Sprites\UI\UITable.xnb" />
   </ItemGroup>
@@ -43,6 +46,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\Backgrounds\Forest.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sprites\Checkpoint\Checkpoint.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\Hero\IdleHero.xnb">
@@ -61,6 +67,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\Platform\StraightTile.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sprites\UI\Buttons\NextLevelButton.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\UI\Titles\GameOver.xnb">
@@ -85,6 +94,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\UI\Buttons\SettingsButton.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sprites\UI\Titles\Victory.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\UI\UICanvas.xnb">
