--- a/SwampLands/SwampLands/SwampLands.csproj
+++ b/SwampLands/SwampLands/SwampLands.csproj
@@ -20,6 +20,7 @@
     <None Remove="Content\Sprites\Hero\RunHero.xnb" />
     <None Remove="Content\Sprites\Platform\BottomTile.xnb" />
     <None Remove="Content\Sprites\Platform\LeftCornerTile.xnb" />
+    <None Remove="Content\Sprites\Platform\MovingPlatform.xnb" />
     <None Remove="Content\Sprites\Platform\RightCornerTile.xnb" />
     <None Remove="Content\Sprites\Platform\StraightTile.xnb" />
     <None Remove="Content\Sprites\UI\Buttons\NextLevelButton.xnb" />
@@ -61,6 +62,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\Platform\LeftCornerTile.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sprites\Platform\MovingPlatform.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\Platform\RightCornerTile.xnb">
