--- a/SwampLands/SwampLands/SwampLands.csproj
+++ b/SwampLands/SwampLands/SwampLands.csproj
@@ -16,6 +16,7 @@
     <None Remove="Content\Fonts\Arial48Bold.xnb" />
     <None Remove="Content\Sprites\Backgrounds\Forest.xnb" />
     <None Remove="Content\Sprites\Checkpoint\Checkpoint.xnb" />
+    <None Remove="Content\Sprites\Enemies\Snail.xnb" />
     <None Remove="Content\Sprites\Hero\IdleHero.xnb" />
     <None Remove="Content\Sprites\Hero\RunHero.xnb" />
     <None Remove="Content\Sprites\Platform\BottomTile.xnb" />
@@ -50,6 +51,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\Checkpoint\Checkpoint.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sprites\Enemies\Snail.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\Hero\IdleHero.xnb">
