--- a/SwampLands/SwampLands/SwampLands.csproj
+++ b/SwampLands/SwampLands/SwampLands.csproj
@@ -16,6 +16,8 @@
     <None Remove="Content\Fonts\Arial48Bold.xnb" />
     <None Remove="Content\Sprites\Backgrounds\Forest.xnb" />
     <None Remove="Content\Sprites\Checkpoint\Checkpoint.xnb" />
+    <None Remove="Content\Sprites\Enemies\Bird.xnb" />
+    <None Remove="Content\Sprites\Enemies\Rino.xnb" />
     <None Remove="Content\Sprites\Enemies\Snail.xnb" />
     <None Remove="Content\Sprites\Hero\IdleHero.xnb" />
     <None Remove="Content\Sprites\Hero\RunHero.xnb" />
@@ -51,6 +53,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\Checkpoint\Checkpoint.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sprites\Enemies\Bird.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sprites\Enemies\Rino.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sprites\Enemies\Snail.xnb">
